# ResponsibleAi

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY_RUNBOOK.md  Dockerfile  ENTERPRISE_SECURITY.md  FOUNDER_ACTION_CHECKLIST.md  GOVERNANCE.md  LICENSE  PRIVACY_POLICY.md  README.md  SECURITY.md  SLA.md  STRATEGY_ROADMAP.md  TERMS_OF_SERVICE.md  VERSION_ROADMAP.md  alembic.ini  docker-compose.prod.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
compliance/: CAIQ_SELF_ASSESSMENT.md  COMPLIANCE_STARTER_KIT_OFFER.md  DPA_ATTORNEY_SCOPE_BRIEF.md  DPA_TEMPLATE.md  INCIDENT_RESPONSE_RUNBOOK.md  INSURANCE_PARTNERSHIP_PITCH.md  INTERNAL_SECURITY_REVIEW.md  KEY_MANAGEMENT.md  LEADERBOARD_METHODOLOGY.md  MCP_DISTRIBUTION_GUIDE.md  NIST_CSF_SELF_ASSESSMENT.md  OEM_LICENSING.md  SALES_TARGETING.md  SOC2_READINESS.md  TABLETOP_EXERCISE_2026-07-21.md  TRUST_INDEX_PAPER.md  TRUST_INDEX_SPEC.md  VENDOR_RISK_ASSESSMENT.md
compliance/outreach/: READY_TO_SEND_EMAILS.md
compliance/starter-kit/: CAIQ_TEMPLATE.md  NIST_CSF_TEMPLATE.md
examples/: 01_trust_score.py  02_ai_passport.py  03_guardrails.py  04_compliance.py  05_cost_intelligence.py  06_drift_monitor.py  07_full_governance_pipeline.py
examples/output/: passport_sample.html
grafana/dashboards/: rai-overview.json
grafana/prometheus/: alert-rules.yml  alertmanager.yml.example
grafana/provisioning/dashboards/: default.yaml
grafana/provisioning/datasources/: prometheus.yaml
helm/rai-governance/: Chart.yaml  values.yaml
helm/rai-governance/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_org_id_to_usage_tables.py  0003_add_billing_plan_to_orgs.py  0004_add_sso_and_audit_integrity.py  0005_encrypt_audit_ip_address.py  0006_add_incidents_table.py  0007_add_leaderboard_tables.py  0008_add_trust_passports_table.py  0009_add_public_incident_reports_table.py  0010_add_mfa_and_webhook_persistence.py
scripts/: backup-postgres.sh  deploy.sh  generate_compliance_kit.py  load-test.js  restore-postgres.sh  rotate_field_encryption_key.py  run_leaderboard_eval.py  security-scan.sh
sdk/go/: go.mod
sdk/go/raiclient/: client.go  models.go
sdk/python/: pyproject.toml
sdk/python/rai_client/: __init__.py  client.py  models.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  models.ts
src/biasbuster/: __init__.py  cli.py
src/biasbuster/core/: base_probe.py  result.py  runner.py  scoring.py
src/biasbuster/probes/: __init__.py  age_bias.py  cultural_bias.py  gender_bias.py  occupational_stereotype.py  racial_bias.py  religious_bias.py
src/biasbuster/providers/: anthropic_provider.py
src/biasbuster/reporting/: html_reporter.py
src/privacylabel/core/: label.py
src/privacylabel/deepfake/: detector.py  ensemble.py
src/privacylabel/federated/: aggregator.py  client.py
src/responsibleai/: __init__.py
src/responsibleai/auth/: __init__.py  mfa.py  oidc.py
src/responsibleai/billing/: __init__.py  stripe_service.py
src/responsibleai/compliance/: engine.py
src/responsibleai/cost/: analyzer.py  models.py  router.py  tracker.py
src/responsibleai/dashboard/: app.py  config.py  logging_config.py  middleware.py  plan_rate_limiter.py  prometheus.py  websocket_manager.py
src/responsibleai/dashboard/static/: audit.html  auth_complete.html  billing.html  cost.html  eval.html  evaluate.html  guardrails.html  hallucination.html  incident_db.html  incident_db_detail.html  incident_db_report.html  incidents.html  index.html  leaderboard.html  login.html  organizations.html  redteam.html  router.html  settings.html  status.html  trust.html  trust_scores.html  verify.html  webhooks_manage.html
src/responsibleai/dashboard/static/css/: app.css
src/responsibleai/db/: __init__.py  audit_repository.py  encryption.py  engine.py  eval_repository.py  incident_repository.py  leaderboard_repository.py  mcp_usage_repository.py  migrate.py  org_repository.py  passport_repository.py  public_incident_repository.py  repositories.py  webhook_repository.py
src/responsibleai/drift/: monitor.py
src/responsibleai/eval/: __init__.py  benchmarks.py  dataset_scanner.py  models.py
src/responsibleai/guardrails/: engine.py
src/responsibleai/hallucination/: detector.py
src/responsibleai/incidents/: __init__.py  logic.py
src/responsibleai/leaderboard/: __init__.py  models.py  providers.py  runner.py
src/responsibleai/mcp/: __init__.py  licensing.py  resources.py  server.py  tools.py
src/responsibleai/rbac/: __init__.py  models.py  permissions.py
src/responsibleai/redteam/: simulator.py
src/responsibleai/streaming/: __init__.py  scanner.py
src/responsibleai/trust/: __init__.py  badge.py  passport.py  score.py
src/responsibleai/webhooks/: __init__.py  manager.py  models.py
tests/: conftest.py  test_age_bias.py  test_ai_passport.py  test_anthropic_provider.py  test_async_db.py  test_audit_log.py  test_compliance_engine.py  test_config.py  test_cost_analyzer.py  test_cost_router.py  test_cost_tracker.py  test_cultural_bias.py  test_dashboard_api.py  test_db_engine_retry.py  test_db_migrate.py  test_deepfake_detector.py  test_eval.py  test_federated_aggregator.py  test_federated_client.py  test_field_encryption.py  test_generate_compliance_kit.py  test_guardrails_engine.py  test_hallucination_detector.py  test_html_reporter.py  test_intersectional.py  test_json_reporter.py  test_label_core.py  test_leaderboard_providers.py  test_leaderboard_repository.py  test_leaderboard_runner.py  test_llm_integration.py  test_mcp_server.py  test_mcp_server_gating.py  test_mcp_usage_repository.py  test_mfa.py  test_mfa_login_flow.py  test_openai_provider.py  test_org_api.py  test_passport_repository.py  test_plan_rate_limiter.py  (+12 more)
wiki/: BiasBuster.md  Home.md
(+1 files in other folders)
