[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biasbuster"
version = "0.4.0"
description = "ResponsibleAI — Enterprise AI Governance Platform: bias, hallucination, guardrails, compliance (NIST AI RMF/EU AI Act/ISO 42001), federated labeling with DP, deepfake detection"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Guruprasath Annadurai", email = "milchcreamfoods@gmail.com" }]
keywords = [
    "llm", "bias", "fairness", "responsible-ai", "ai-governance",
    "federated-learning", "differential-privacy", "deepfake-detection",
    "hallucination", "guardrails", "compliance", "eu-ai-act", "nist-ai-rmf",
    "ai-safety", "ai-trust", "red-teaming", "pii-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.28.0"]
huggingface = ["transformers>=4.40.0", "torch>=2.0.0"]
# PrivacyLabel extras
privacy = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]
deepfake = ["torch>=2.0.0", "torchvision>=0.15.0", "pillow>=10.0.0", "opencv-python>=4.8.0"]
# Meta extras
all = ["biasbuster[openai,anthropic,huggingface,privacy,deepfake]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "biasbuster[openai,anthropic]",
]

[project.scripts]
biasbuster = "biasbuster.cli:main"
responsibleai = "biasbuster.cli:main"

[project.urls]
Homepage = "https://github.com/Guruprasath-Annadurai/ResponsibleAi"
Repository = "https://github.com/Guruprasath-Annadurai/ResponsibleAi"
Issues = "https://github.com/Guruprasath-Annadurai/ResponsibleAi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/biasbuster", "src/privacylabel", "src/responsibleai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/biasbuster --cov=src/privacylabel --cov=src/responsibleai --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "N"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
