[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rai-governance-platform"
version = "1.1.0"
description = "ResponsibleAI — Enterprise AI Governance Platform: trust scoring, bias detection, hallucination detection, guardrails, compliance (NIST AI RMF / EU AI Act / ISO 42001), cost intelligence, drift monitoring"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Guruprasath Annadurai", email = "milchcreamfoods@gmail.com" }]
keywords = [
    "llm", "bias", "fairness", "responsible-ai", "ai-governance",
    "federated-learning", "differential-privacy", "deepfake-detection",
    "hallucination", "guardrails", "compliance", "eu-ai-act", "nist-ai-rmf",
    "iso-42001", "ai-safety", "ai-trust", "red-teaming", "pii-detection",
    "cost-intelligence", "token-tracking", "drift-detection", "model-routing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "nltk>=3.8.0",
    "mcp>=1.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
]
postgres   = ["asyncpg>=0.29.0"]
redis      = ["limits[redis]>=3.6.0"]
telemetry  = [
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
]
sso        = ["PyJWT[crypto]>=2.8.0", "httpx>=0.27.0"]
openai     = ["openai>=1.30.0"]
anthropic  = ["anthropic>=0.28.0"]
huggingface = ["transformers>=4.40.0", "torch>=2.0.0"]
privacy    = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
deepfake   = ["torch>=2.0.0", "torchvision>=0.15.0", "pillow>=10.0.0", "opencv-python>=4.8.0"]
all        = ["rai-governance-platform[dashboard,postgres,redis,telemetry,openai,anthropic,huggingface,deepfake,sso]"]
mcp        = ["mcp>=1.0.0"]
billing    = ["stripe>=9.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "PyJWT[crypto]>=2.8.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "asgi-lifespan>=2.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "mcp>=1.0.0",
]

[project.scripts]
biasbuster        = "biasbuster.cli:main"
responsibleai     = "biasbuster.cli:main"
responsibleai-mcp = "responsibleai.mcp.server:main"
responsibleai-mcp-http = "responsibleai.mcp.server:main_http"

[project.urls]
Homepage   = "https://github.com/Guruprasath-Annadurai/ResponsibleAi"
Repository = "https://github.com/Guruprasath-Annadurai/ResponsibleAi"
Issues     = "https://github.com/Guruprasath-Annadurai/ResponsibleAi/issues"
Changelog  = "https://github.com/Guruprasath-Annadurai/ResponsibleAi/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/biasbuster", "src/privacylabel", "src/responsibleai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=src/responsibleai --cov=src/biasbuster --cov=src/privacylabel --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["E501", "B008", "N802"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"
