[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rai-client"
version = "1.0.0"
description = "Python SDK for the ResponsibleAI Governance Platform"
license = { file = "../../LICENSE" }
authors = [{ name = "Guruprasath Annadurai", email = "milchcreamfoods@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/Guruprasath-Annadurai/ResponsibleAi"

[tool.hatch.build.targets.wheel]
packages = ["rai_client"]
